--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,7 +1,7 @@
 .btn {
 	height: 100%;
 	border-radius: 0.7rem;
-    color: var(--color-text);
+    color: var(--color-text--primary);
 	font-size: 3rem;
 }
 
