fix: issues with responsive layout

--- a/src/Components/Calculator/Calculator.css
+++ b/src/Components/Calculator/Calculator.css
@@ -5,18 +5,18 @@
 	padding: 4rem 2rem;
 	border-radius: 0.7rem;
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: 3fr repeat(5, 1fr);
+	grid-template-columns: repeat(4, minmax(0,1fr));
+	grid-template-rows: 3fr repeat(5, minmax(0,1fr));
 	grid-gap: 1.4rem 0.8rem;
 }
 
 @media only screen and (max-width: 1024px) {
 	.layout-calculator {
 		background-color: var(--color-bg--primary);
-		height: 100vh;
-		width: 100vw;
+		height: 100%;
+		width: 100%;
 		border-radius: 0;
-		padding: 2rem 1rem;
+		padding: 1.4rem 0.7rem;
 		grid-gap: 0.8rem 0.4rem;
 	}
 }
