--- a/src/App/App.css
+++ b/src/App/App.css
@@ -14,12 +14,12 @@
 	--color-btn--modifier: #95a5a6;
 }
 
-html {
-  	box-sizing: border-box;
+html, body {
+	box-sizing: border-box;
+	height: 100%;
 }
 
 body {
-	margin: 0;
 	font-family: var(--font-primary);
 	font-size: 16px;
 	-webkit-font-smoothing: antialiased;
@@ -29,7 +29,9 @@ body {
 *,
 *::before,
 *::after {
-  	box-sizing: border-box;
+	  box-sizing: border-box;
+	  margin: 0;
+	  padding: 0;
 }
 
 button {
@@ -42,7 +44,7 @@ button {
 
 .layout-container {
 	background-color: var(--color-bg--secondary);
-	height: 100vh;
+	height: 100%;
 	display: grid;
 	place-items: center;
 }
