--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,5 +1,4 @@
 .btn {
-	height: 100%;
 	border-radius: 0.7rem;
     color: var(--color-text--primary);
 	font-size: 3rem;
@@ -21,14 +20,8 @@
     grid-column: span 2;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 600px) {
 	.btn {
-		font-size: 4rem;
-	}
-}
-
-@media only screen and (max-width: 375px) {
-	.btn {
-		font-size: 2rem;
+		font-size: 9vw;
 	}
 }
