--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -4,7 +4,22 @@
 	font-size: 3rem;
 }
 
-.btn--number {
+.btn--history {
+	position: absolute;
+	top: 1.2rem;
+	right: 2rem;
+}
+
+.btn--history,
+.btn--clear {
+	text-transform: capitalize;
+	font-size: 0.9rem;
+	border-radius: 0.4rem;
+	padding: 0.3rem 0.6rem;
+}
+
+.btn--number,
+.btn--history {
     background-color: var(--color-btn--number);
 }
 
@@ -20,8 +35,30 @@
     grid-column: span 2;
 }
 
+.btn--clear {
+	background-color: #FF5722;
+}
+
+aside .btn--history {
+	right: 1rem;
+}
+
+@media only screen and (max-width: 1024px) {
+	.btn--history {
+		font-size: 2.4vw;
+		top: 0.7rem;
+		right: 0.7rem;
+	}
+}
+
 @media only screen and (max-width: 600px) {
 	.btn {
 		font-size: 9vw;
+	}
+
+	.btn--history {
+		font-size: 4vw;
+		top: 1rem;
+		right: 0.7rem;
 	}
 }
